Name:                er-system
Version:             0.1
Synopsis:            A KURE-enabled Implementation of System-F.
Description:	     A KURE-enabled Implementation of System-F.
Category:            Language
License:             BSD3
License-file:        LICENSE
Author:              Andy Gill
Maintainer:          Andy Gill <andygill@ku.edu>
Stability:	     alpha
build-type: 	     Simple
Cabal-Version:       >= 1.6

Library
  Build-Depends:        base, kure >= 0.2.4, kure-your-boilerplate >= 0.1.2, parsec >= 3.0, marked-pretty
  Exposed-modules:
      Language.SystemF.Syntax
      Language.SystemF.Rewrite
      Language.SystemF.Parser
      Language.SystemF.Pretty
      Language.SystemF.Subst
      Language.SystemF.Eval
--      Language.SystemF.Rewrite

Executable test
  Build-Depends:        base, kure >= 0.2.4, kure-your-boilerplate >= 0.1.2, parsec >= 3.0, marked-pretty
  Main-Is:        Main.hs
  Hs-Source-Dirs: ., test
  buildable: True

